--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-[]
+[
+    {
+        "key": "datr",
+        "value": "ui1iZwTzjC5eSUib1wQwFMwn",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "sb",
+        "value": "ui1iZ4lE09r4p6CvrAYN1V8b",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x766",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100093707226679",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "xs",
+        "value": "4%3ApNdnk-plJJ3o4w%3A2%3A1734525122%3A-1%3A7840",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B766x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "fr",
+        "value": "0yR67Tp1b3lPn1XOB.AWXMcAC81vmhAzNJPB-wdo2H6ic.BnYi26..AAA.0.0.BnYsDt.AWU3E7Esybc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100628107%3BT%3A28908752",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2699%3Btimestamp%3A1734525178",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-18T12:33:15.684Z",
+        "lastAccessed": "2024-12-18T12:33:15.684Z"
+    }
+]
