--- a/appstate.json
+++ b/appstate.json
@@ -1,119 +1,152 @@
 [
     {
-        "key": "datr",
-        "value": "ui1iZwTzjC5eSUib1wQwFMwn",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "datr",
+        "value": "QmNjZ6cchHs2ZD5GKggdvl_N",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1769126722,
+        "storeId": null
     },
     {
-        "key": "sb",
-        "value": "ui1iZ4lE09r4p6CvrAYN1V8b",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "fr",
+        "value": "0XqYAuNzMb5E9DRkb.AWUVKSRtF0Ob3-L4rs8phTKRTFU.BnY2NC..AAA.0.0.BnY2Nm.AWUuFK8Xd2M",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1742342762,
+        "storeId": null
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "2.75",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "vpd",
+        "value": "v1%3B772x393x2.727272727272727",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "lax",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1739750905,
+        "storeId": null
     },
     {
-        "key": "wd",
-        "value": "393x766",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "xs",
+        "value": "13%3A8uSCDTd_M9AfMg%3A2%3A1734566760%3A-1%3A7840",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1766102762,
+        "storeId": null
     },
     {
-        "key": "c_user",
-        "value": "100093707226679",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "fbl_st",
+        "value": "101633593%3BT%3A28909448",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "strict",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1766102905,
+        "storeId": null
     },
     {
-        "key": "xs",
-        "value": "4%3ApNdnk-plJJ3o4w%3A2%3A1734525122%3A-1%3A7840",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
-    },
-    {
-        "key": "locale",
+        "name": "locale",
         "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1735171602,
+        "storeId": null
     },
     {
-        "key": "vpd",
-        "value": "v1%3B766x393x2.75",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "c_user",
+        "value": "100093707226679",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1766102762,
+        "storeId": null
     },
     {
-        "key": "fr",
-        "value": "0yR67Tp1b3lPn1XOB.AWXMcAC81vmhAzNJPB-wdo2H6ic.BnYi26..AAA.0.0.BnYsDt.AWU3E7Esybc",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "sb",
+        "value": "QmNjZ7PEK3yKIeTCnoWFR-bz",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": true,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1769126762,
+        "storeId": null
     },
     {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "wd",
+        "value": "396x822",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "path": "/",
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "lax",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1735171523,
+        "storeId": null
     },
     {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
+        "name": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2699%3Btimestamp%3A1734566905",
+        "domain": ".facebook.com",
         "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100628107%3BT%3A28908752",
-        "domain": "facebook.com",
         "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2699%3Btimestamp%3A1734525178",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-18T12:33:15.684Z",
-        "lastAccessed": "2024-12-18T12:33:15.684Z"
+        "secure": true,
+        "httpOnly": false,
+        "sameSite": "no_restriction",
+        "session": false,
+        "firstPartyDomain": "",
+        "partitionKey": null,
+        "expirationDate": 1742342905,
+        "storeId": null
     }
 ]
